--- a/index.html
+++ b/index.html
@@ -17,7 +17,34 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-
+<!--barra de navegacion-->
+<nav class="navbar navbar-expand-md navbar-light ">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbar-toggler">
+      <a class="navbar-brand" href="#">
+        <img src="imegenes/murcielago-volador.png" width="50" alt="Logo de la pagina">
+      </a>
+      <ul class="navbar-nav d-flex justify-content-center align-items-center" >
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Jugadores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Planilla</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Asistencia</a>
+        </li>
+      </ul>
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+</nav>
     
 
 
