--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="nav-link" href="#">Planilla</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Asistencia</a>
+          <a class="nav-link" href="#" tabindex="-1" aria-disabled="false">Asistencia</a>
         </li>
       </ul>
       <form class="d-flex">
