--- a/index.html
+++ b/index.html
@@ -10,24 +10,30 @@
     <!--Tirulo-->
     <title>MBOPI S.A</title>
     <!--Favicon-->
-    <link rel="icon" type="imege/x-icon" href="imegenes/murcielago-volador.png">
+    <link rel="icon" type="imege/x-icon" href="imagenes/murcielago-volador.png">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <!--CSS-->
     <link href="style.css" rel="stylesheet">
 </head>
-<body>
-<!--barra de navegacion-->
-<nav class="navbar navbar-expand-md navbar-light ">
+<!-- Barra de navegación Bootstrap centrada y responsive -->
+<nav class="navbar navbar-expand-md navbar-light bg-light">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+    <!-- Botón hamburguesa -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbar-toggler">
-      <a class="navbar-brand" href="#">
-        <img src="imegenes/murcielago-volador.png" width="50" alt="Logo de la pagina">
-      </a>
-      <ul class="navbar-nav d-flex justify-content-center align-items-center" >
+
+    <!-- Logo -->
+    <a class="navbar-brand" href="#">
+      <img src="imagenes/murcielago-volador.png" width="50" alt="Logo de la página">
+    </a>
+
+    <!-- Contenido colapsable -->
+    <div class="collapse navbar-collapse justify-content-between" id="navbarToggler">
+
+      <!-- Menú -->
+      <ul class="navbar-nav mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Jugadores</a>
         </li>
@@ -35,24 +41,16 @@
           <a class="nav-link" href="#">Planilla</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="false">Asistencia</a>
+          <a class="nav-link" href="#">Asistencia</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+
+      <!-- Barra de búsqueda centrada -->
+      <form class="d-flex mx-auto w-50">
+        <input class="form-control me-2" type="search" placeholder="Buscar..." aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Buscar</button>
       </form>
     </div>
   </div>
 </nav>
-    
-
-
-
-
- 
-    
-<!--JavaScript-->
- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>   
-</body>
 </html>
